# mostinger

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  articles_data.json  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml  requirements.txt  setup.sh  users_data.json
.github/workflows/: ci.yml
app/: app.py
backend/: Dockerfile  alembic.ini  create_admin.py  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a9c0c09c2526_create_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  deps.py  posts.py  users.py
backend/app/core/: __init__.py  cache.py  security.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/schemas/: __init__.py  auth.py  post.py  user.py
database/: er_diagram.md  schema.sql
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/e2e/: auth.spec.js  posts.spec.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorMessage.jsx  Layout.jsx  Loading.jsx  Pagination.jsx  PostCard.jsx  SearchBar.jsx
frontend/src/pages/: CreatePost.jsx  EditPost.jsx  Favorites.jsx  Home.jsx  Login.jsx  PostDetail.jsx  Profile.jsx  Register.jsx  Users.jsx
frontend/src/store/: authStore.js  themeStore.js
frontend/src/utils/: api.js  formatDate.js  validation.js
templates/: article.html  base.html  create.html  edit.html  error.html  main.html
